# simple-sklearn

./: .codecov.yml  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  release-please.yml
data/: README.md
docs/: index.md  ruff.toml
docs/notebooks/: classification.ipynb  clustering.ipynb  tools.md
docs/notebooks/tools/: classification_tools.py  clustering_tools.py
docs/reference/: index.md
docs/reference/classification/: decision_tree.md  index.md  k_neighbors.md  naive_bayes.md  one_r.md
docs/reference/clustering/: agglomerative.md  base_partitional.md  dbscan.md  index.md  k_means.md  k_medoids.md  tools.md
notebooks/: classification.ipynb  clustering.ipynb
notebooks/tools/: classification_tools.py  clustering_tools.py
src/simple_sklearn/: __init__.py
src/simple_sklearn/classification/: DecisionTreeClassifier.py  KNeighborsClassifier.py  NaiveBayesClassifier.py  OneRClassifier.py  __init__.py  _decision_tree.py  _k_neighbors.py  _naive_bayes.py  _one_r.py  decision_tree.py  k_neighbors.py  naive_bayes.py  one_r.py  tree_structure.py
src/simple_sklearn/clustering/: DBSCAN.py  KMeans.py  KMedoids.py  __init__.py  _agglomerative.py  _base_partitional.py  _dbscan.py  _k_means.py  _k_medoids.py  _tools.py  agglomerative.py  dbscan.py  k_means.py  k_medoids.py  tools.py
tests/: test_sklearn_compatibility.py  test_version.py  testing_utils.py
tests/classification/: conftest.py  test_decision_tree.py  test_decision_tree_classifier.py  test_kneighbors.py  test_kneighbors_classifier.py  test_naive_bayes.py  test_naive_bayes_classifier.py  test_one_r.py  test_one_r_classifier.py  testing_utils.py
tests/clustering/: conftest.py  test_agglomerative.py  test_agglomerative_clustering.py  test_dbscan.py  test_k_means.py  test_k_medoids.py  test_kmeans.py  test_kmedoids.py  testing_utils.py
