[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-sklearn"
dynamic = ["version"]
authors = [
  { name="Artem Poliakov", email="artem4250@gmail.com" },
]
description = ""  # TODO
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn>=1.6.1",
    "numpy>=1.26",
    "pandas>=2.2.3",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
jupyter = [
    "notebook>=7.3.2",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]
quality = [
    "mypy>=1.19.1",
    "pandas-stubs>=2.2.3",
    "scipy-stubs>=1.13.1",
    "pre-commit>=4.0.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
]
dev = [
    "ruff==0.14.9",
    "build==1.4.0",
    "twine==6.2.0",
    "check-sdist==1.4.0",
]

[project.urls]
Repository = "https://github.com/Artem259/simple-sklearn"

[tool.setuptools_scm]
version_file = "src/simple_sklearn/_version.py"
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.check-sdist]
git-only = [
    "data/**",
    "docs/**",
    ".gitattributes",
    ".gitignore",
    ".yamllint.yaml",
    "Makefile",
]
default-ignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=simple_sklearn --cov-branch --cov-report=term-missing"

[tool.coverage.paths]
source = [
    "src/simple_sklearn",
    "*/site-packages/simple_sklearn",
    "*\\site-packages\\simple_sklearn"
]

[tool.coverage.run]
omit = [
    "src/simple_sklearn/_version.py",
    "*/site-packages/simple_sklearn/_version.py",
    "*\\site-packages\\simple_sklearn\\_version.py"
]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "S",
    "PT",
    "N",
    "C90",
    "RUF",
    "PTH",
    "RET",
    "ARG",
    "BLE",
    "T20",
    "C4",
]
ignore = [
    "B008",
    "ARG001", "ARG002",
    "N803", "N806",
    "RET504",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"docs/notebooks/**/*.{py,ipynb}" = [
    "S101",
    "T201",
]
"tests/**/*.py" = [
    "S101",
    "T201",
]

[tool.mypy]
files = ["src", "tests"]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
]
ignore_missing_imports = true
